<resources>
    <string name="app_name">Mobile_Dev_Final_Project</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>

    <string name="email_text">Email</string>
    <string name="password_text2">Password</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>

    <string name="previous_ride">Previous Ride:</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>


    <string name="street_address">Street Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">ZIP</string>

    <string-array name="spinner">
        <item>Rider</item>
        <item>Driver</item>
    </string-array>

    <string-array name="spinnerGender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>