<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    tools:context=".RegisterActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ridesharingapp" />

            <TextView
                android:id="@+id/new_fullname_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <EditText
                android:id="@+id/new_fullname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/new_email_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_text" />

            <EditText
                android:id="@+id/new_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/new_gender_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/new_gender_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/new_password_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_text" />

            <EditText
                android:id="@+id/new_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="REGISTER USER"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>