<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/email_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        app:layout_constraintBottom_toTopOf="@+id/profile_fullName"
        app:layout_constraintStart_toStartOf="@+id/fullName_display"
        app:layout_constraintTop_toBottomOf="@+id/fullName_display" />

    <TextView
        android:id="@+id/travelPoints_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="travel points: "
        app:layout_constraintBottom_toTopOf="@+id/fullName_display"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="35dp" />

    <TextView
        android:id="@+id/fullName_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/email_display"
        app:layout_constraintStart_toStartOf="@+id/travelPoints_display"
        app:layout_constraintTop_toBottomOf="@+id/travelPoints_display" />

    <TextView
        android:id="@+id/profile_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_fullName_form"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/profile_fullName_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/profile_email"
        app:layout_constraintTop_toBottomOf="@+id/profile_fullName" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        app:layout_constraintBottom_toTopOf="@+id/profile_email_form"
        app:layout_constraintTop_toBottomOf="@+id/profile_fullName_form" />

    <EditText
        android:id="@+id/profile_email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/profile_password"
        app:layout_constraintTop_toBottomOf="@+id/profile_email" />

    <TextView
        android:id="@+id/profile_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text"
        app:layout_constraintBottom_toTopOf="@+id/profile_password_form"
        app:layout_constraintTop_toBottomOf="@+id/profile_email_form" />

    <EditText
        android:id="@+id/profile_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_update_user"
        app:layout_constraintTop_toBottomOf="@+id/profile_password" />

    <Button
        android:id="@+id/button_update_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="UPDATE PROFILE"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_password_form" />

</androidx.constraintlayout.widget.ConstraintLayout>